--- a/static/app.css
+++ b/static/app.css
@@ -10,20 +10,23 @@ background-color: #F6EBCB;
 }
 
 
-#banner, #editor {
+#banner, #edit {
 background: #FFFAEB;
-border: 1px solid #8A7843;
-border-radius: 0.95em;
+border-color: #8A7843;
+border-style: solid;
 }
 
 #banner {
 padding: 0%;
 margin-top: 0.3em;
-margin-bottom: 0.3em;
+padding-bottom: 0.3em;
 color: rgb(7, 54, 66);
 text-align:center;
 width: 30vw;
 overflow:hidden;
+border-radius: 0.95em 0.95em 0 0 ;
+border-bottom-style: none;
+border-width: 1px;
 }
 
 #editor {
@@ -43,11 +46,14 @@ margin-right:auto;
 float: left;
 width: 30vw;
 height: 100%;
+border-top-style: none;
+border-width: 1px;
+border-radius: 0 0 0.95em 0.95em;
 }
 
 #editor {
 height: 92%;
-margin-top: 0.3em;
+margin-top: 0.5em;
 }
 
 #outputwrapper {
