--- a/static/app.css
+++ b/static/app.css
@@ -22,9 +22,10 @@ flex-direction: column;
 
 #banner {
 padding: 0%;
-margin-top: 0.3em;
-padding-bottom: 0.3em;
-text-align:center;
+margin-top: 0.0em;
+padding-bottom: 0.0em;
+line-height: 0%;
+text-align:left;
 overflow:hidden;
 }
 
@@ -100,7 +101,7 @@ border-radius:5px;
 font-size:16px;
 font-weight:700;
 padding:4px 16px;
-text-shadow:#FE6 0 1px 
+text-shadow:#FE6 0 1px;
 text-decoration: none;
 outline: none;
 }
